--- a/.github/template-workflows/codeql.yml
+++ b/.github/template-workflows/codeql.yml
@@ -20,7 +20,7 @@ on:
       - '.*'
       - '*.md'
   schedule:
-    - cron: '0 6 * * 1'  # Weekly on Mondays at 6 AM UTC - Comprehensive scan regardless of paths
+    - cron: '0 6 * * 1'  # Weekly on Mondays at 6 AM UTC
   workflow_dispatch:
 
 permissions:
