refactor(ai): standardize on Azure OpenAI, document sync.yml extraction constraint
Remove OpenAI fallback support across all workflows and actions to standardize
on Azure OpenAI as the single AI provider, with graceful fallback to static
templates when Azure is unavailable.

Changes:
- Remove OpenAI support from llm-provider-detect action (detect-provider.sh, action.yml)
- Update llm-provider-detect README to remove OpenAI testing examples
- Remove OPENAI_API_KEY from sync.yml environment variables
- Add ADR-028 reference comments to sync.yml explaining inline LLM detection
- Update ADR-028 with evaluated workarounds section

Rationale:
sync.yml contains duplicated LLM detection logic that cannot be extracted to
the shared llm-provider-detect action due to a technical constraint: the workflow
runs from fork_upstream branch where .github/actions/ don't exist yet (ADR-028 §7.1).
This duplication is an accepted architectural tradeoff (~24 lines across 2 locations).

Added inline comments referencing ADR-028 to ensure future maintainers understand
why the code is duplicated rather than using the reusable action pattern.

Updated ADR-028 with "Attempted Workarounds Evaluated" section documenting why
alternatives (bash functions, checkout actions, external actions) were rejected.

Impact:
- Consistency: All workflows now use identical Azure-only detection logic
- Documentation: Clear ADR references explain architectural constraints
- Maintainability: Future changes to AI provider logic have clear guidance

--- a/.github/actions/llm-provider-detect/action.yml
+++ b/.github/actions/llm-provider-detect/action.yml
@@ -1,12 +1,12 @@
 name: 'LLM Provider Detection'
-description: 'Detect available LLM provider (Azure OpenAI → OpenAI → Fallback)'
+description: 'Detect available LLM provider (Azure OpenAI → Fallback)'
 
 outputs:
   use_llm:
     description: 'Whether LLM is available (true/false)'
     value: ${{ steps.detect.outputs.use_llm }}
   llm_model:
-    description: 'LLM model identifier (azure for Azure OpenAI, gpt-4 for OpenAI, empty for fallback)'
+    description: 'LLM model identifier (azure for Azure OpenAI, empty for fallback)'
     value: ${{ steps.detect.outputs.llm_model }}
 
 runs:
@@ -19,4 +19,3 @@ runs:
       env:
         AZURE_API_KEY: ${{ env.AZURE_API_KEY }}
         AZURE_API_BASE: ${{ env.AZURE_API_BASE }}
-        OPENAI_API_KEY: ${{ env.OPENAI_API_KEY }}
