docs(terminology): update Azure OpenAI references to Azure Foundry
Update all user-facing comments, documentation, and echo statements to use
"Azure Foundry" terminology instead of "Azure OpenAI" to reflect the actual
platform being used.

Changes:
- Update llm-provider-detect action comments and README
- Update sync.yml echo statements and comments
- Update ADR-013, ADR-014 documentation
- Update architecture documentation (ai_integration.md)
- Update mkdocs ADR documentation (adr_014_ai_integration.md)

Note: Technical identifiers (AZURE_API_KEY, AZURE_API_BASE, etc.) and
API URLs remain unchanged as they reference the underlying Azure API
infrastructure.

--- a/.github/actions/llm-provider-detect/action.yml
+++ b/.github/actions/llm-provider-detect/action.yml
@@ -1,12 +1,12 @@
 name: 'LLM Provider Detection'
-description: 'Detect available LLM provider (Azure OpenAI → Fallback)'
+description: 'Detect available LLM provider (Azure Foundry → Fallback)'
 
 outputs:
   use_llm:
     description: 'Whether LLM is available (true/false)'
     value: ${{ steps.detect.outputs.use_llm }}
   llm_model:
-    description: 'LLM model identifier (azure for Azure OpenAI, empty for fallback)'
+    description: 'LLM model identifier (azure for Azure Foundry, empty for fallback)'
     value: ${{ steps.detect.outputs.llm_model }}
 
 runs:
