refactor(ai): remove meta-commit strategy and update to gpt-5-chat
Remove the `-p meta` flag from aipr commands to use default PR description
generation strategy. Update model from gpt-4o to gpt-5-chat for Azure Foundry.

Changes:
- Remove `-p meta` flag from sync.yml (2 locations)
- Remove `-p meta` flag from create-enhanced-pr action
- Update model from azure/gpt-4o to azure/gpt-5-chat
- Remove OpenAI input parameter from create-enhanced-pr action

Rationale:
The meta-commit strategy was designed to preserve upstream commit history
but is no longer needed with the current PR description format. Simplifying
to default aipr behavior reduces complexity and aligns with gpt-5-chat
capabilities.

--- a/.github/template-workflows/sync.yml
+++ b/.github/template-workflows/sync.yml
@@ -295,8 +295,8 @@ jobs:
             echo "   🔍 Attempting AIPR PR generation with model: $LLM_MODEL"
             
             # Single call approach for PR description (use correct aipr pr syntax, no --vulns to reduce prompt size)
-            echo "   📝 Command: aipr pr -m $LLM_MODEL -t fork_upstream -p meta -s"
-            PR_DESCRIPTION=$(timeout 90s aipr pr -m "$LLM_MODEL" -t fork_upstream -p meta -s 2>&1 || echo "AIPR_FAILED")
+            echo "   📝 Command: aipr pr -m $LLM_MODEL -t fork_upstream -s"
+            PR_DESCRIPTION=$(timeout 90s aipr pr -m "$LLM_MODEL" -t fork_upstream -s 2>&1 || echo "AIPR_FAILED")
             
             # Debug what we got back and handle all failure cases
             if [[ "$PR_DESCRIPTION" == "AIPR_FAILED" ]]; then
@@ -399,8 +399,8 @@ jobs:
             echo "   🔍 Attempting AIPR PR generation with model: $LLM_MODEL"
             
             # Single call approach for PR description (use correct aipr pr syntax, no --vulns to reduce prompt size)
-            echo "   📝 Command: aipr pr -m $LLM_MODEL -t fork_upstream -p meta -s"
-            PR_DESCRIPTION=$(timeout 90s aipr pr -m "$LLM_MODEL" -t fork_upstream -p meta -s 2>&1 || echo "AIPR_FAILED")
+            echo "   📝 Command: aipr pr -m $LLM_MODEL -t fork_upstream -s"
+            PR_DESCRIPTION=$(timeout 90s aipr pr -m "$LLM_MODEL" -t fork_upstream -s 2>&1 || echo "AIPR_FAILED")
             
             # Debug what we got back and handle all failure cases
             if [[ "$PR_DESCRIPTION" == "AIPR_FAILED" ]]; then
