--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -22,10 +22,10 @@ jobs:
     
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
-        
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8  # v5
+
       - name: Setup Node.js
-        uses: actions/setup-node@v5
+        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af  # v5
         with:
           node-version: '18'
           
