--- a/.github/workflows/init-complete.yml
+++ b/.github/workflows/init-complete.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Generate GitHub App Token
         id: app-token
-        uses: actions/create-github-app-token@5d869da34e18e7f1f3af0f34c83ac5e6a74fd839  # v1
+        uses: actions/create-github-app-token@v1
         with:
           app-id: ${{ secrets.RELEASE_APP_ID }}
           private-key: ${{ secrets.RELEASE_APP_PRIVATE_KEY }}
@@ -98,7 +98,7 @@ jobs:
     steps:
       - name: Generate GitHub App Token
         id: app-token
-        uses: actions/create-github-app-token@5d869da34e18e7f1f3af0f34c83ac5e6a74fd839  # v1
+        uses: actions/create-github-app-token@v1
         with:
           app-id: ${{ secrets.RELEASE_APP_ID }}
           private-key: ${{ secrets.RELEASE_APP_PRIVATE_KEY }}
