ci(workflows): move permissions to job level for security best practices
Add explicit read permissions to dev-ci validation job
Refactor dev-release to use job-level write permissions

--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -19,7 +19,9 @@ jobs:
     name: Validate Template
     runs-on: ubuntu-latest
     if: github.repository == 'azure/osdu-spi'
-    
+    permissions:
+      contents: read
+
     steps:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8  # v5
