--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -5,8 +5,7 @@ on:
     branches: [main]
 
 permissions:
-  contents: write
-  pull-requests: write
+  contents: read
 
 # Only run in the template repository
 concurrency:
@@ -18,6 +17,9 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     if: github.repository == 'azure/osdu-spi'
+    permissions:
+      contents: write
+      pull-requests: write
 
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8  # v5
