--- a/.github/fork-resources/dependabot.yml
+++ b/.github/fork-resources/dependabot.yml
@@ -133,92 +133,6 @@ updates:
           - "minor"
           - "patch"
 
-  # 4) SPI AWS (corrected directory to /provider/<service>-aws)
-  - package-ecosystem: "maven"
-    directory: "/provider/<service>-aws"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-
-  # 5) SPI GC
-  - package-ecosystem: "maven"
-    directory: "/provider/<service>-gc"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-
-  # 6) SPI IBM
-  - package-ecosystem: "maven"
-    directory: "/provider/<service>-ibm"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-
-  # 7) <service> CORE PLUS
-  - package-ecosystem: "maven"
-    directory: "/<service>-core-plus"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-
-  # 8) <service> ACCEPTANCE TEST
-  - package-ecosystem: "maven"
-    directory: "/<service>-acceptance-test"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-
-  # 9) TESTING
-  - package-ecosystem: "maven"
-    directory: "/testing"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-core-plus"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-baremetal"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-azure"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-core"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-ibm"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-aws"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-gc"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
+  # Note: Disabled providers/modules omitted to avoid validation errors
+  # Dependabot does not support 'interval: never'
+  # If you need to disable updates for specific modules, simply remove them from this file
