ci(security): add OpenSSF Scorecard workflow for security analysis Include automated security scoring with weekly schedule and SARIF upload Update sync configuration to track scorecard workflow template

--- a/.github/sync-config.json
+++ b/.github/sync-config.json
@@ -92,6 +92,10 @@
         {
           "path": ".github/workflows/dev-release.yml",
           "description": "Template release management with Release Please (template only)"
+        },
+        {
+          "path": ".github/workflows/scorecard.yml",
+          "description": "OpenSSF Scorecard security analysis (template only)"
         }
       ],
       "development_only": [
