ci(workflows): replace PAT authentication with GitHub App tokens
Add app token generation step using create-github-app-token action
Update all GH_TOKEN references to use generated app token

--- a/.github/template-workflows/release.yml
+++ b/.github/template-workflows/release.yml
@@ -59,8 +59,15 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      
+
     steps:
+      - name: Generate GitHub App Token
+        id: app-token
+        uses: actions/create-github-app-token@67018539274d69449ef7c02e8e71183d1719ab42  # v2.1.4
+        with:
+          app-id: ${{ secrets.RELEASE_APP_ID }}
+          private-key: ${{ secrets.RELEASE_APP_PRIVATE_KEY }}
+
       - name: "Checkout Code"
         uses: actions/checkout@v5
         with:
@@ -75,7 +82,7 @@ jobs:
           
       - name: "Update Release Tags"
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           # Get the latest release tag
           RELEASE_TAG=$(gh release list -L 1 | cut -f 3)
