--- a/.github/template-workflows/sync.yml
+++ b/.github/template-workflows/sync.yml
@@ -279,7 +279,10 @@ jobs:
 
           # Map LLM_MODEL to full model identifier for aipr
           if [[ "$LLM_MODEL" == "azure" ]]; then
-            AIPR_MODEL="azure/gpt-5-chat"
+            AIPR_MODEL="azure"
+            # Map environment variables to what aipr expects
+            export AZURE_OPENAI_ENDPOINT="$AZURE_API_BASE"
+            export AZURE_OPENAI_API_KEY="$AZURE_API_KEY"
           else
             AIPR_MODEL=""
           fi
@@ -390,7 +393,10 @@ jobs:
 
           # Map LLM_MODEL to full model identifier for aipr
           if [[ "$LLM_MODEL" == "azure" ]]; then
-            AIPR_MODEL="azure/gpt-5-chat"
+            AIPR_MODEL="azure"
+            # Map environment variables to what aipr expects
+            export AZURE_OPENAI_ENDPOINT="$AZURE_API_BASE"
+            export AZURE_OPENAI_API_KEY="$AZURE_API_KEY"
           else
             AIPR_MODEL=""
           fi
