fix(aipr): use azure/gpt-5-chat model instead of default azure model

--- a/.github/actions/create-enhanced-pr/action.yml
+++ b/.github/actions/create-enhanced-pr/action.yml
@@ -73,7 +73,7 @@ runs:
 
         # Map model names for aipr compatibility
         if [[ "$LLM_MODEL" == "azure" ]]; then
-          AIPR_MODEL="azure"
+          AIPR_MODEL="azure/gpt-5-chat"
           echo "Using Azure Foundry for PR description generation"
         else
           AIPR_MODEL=""
