feat(config): make Azure AI model configurable via AIPR_AZURE_MODEL variable
- Add aipr-model input parameter to create-enhanced-pr action
- Use repository variable AIPR_AZURE_MODEL (defaults to gpt-5-chat)
- Supported models: gpt-5-chat, gpt-5-mini, gpt-5-nano
- Single place to configure model across all workflows

--- a/.github/template-workflows/sync-template.yml
+++ b/.github/template-workflows/sync-template.yml
@@ -416,6 +416,7 @@ jobs:
           azure-api-key: ${{ secrets.AZURE_API_KEY }}
           azure-api-base: ${{ secrets.AZURE_API_BASE }}
           azure-api-version: ${{ secrets.AZURE_API_VERSION }}
+          aipr-model: ${{ vars.AIPR_AZURE_MODEL || 'gpt-5-chat' }}
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
           target-branch-for-aipr: main
           use-vulns-flag: 'false'
